added recipes to "skeleton", slightly improved style. Done.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,59 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Polish cookbook - Odin Project</title>
+    <style>
+      body{
+        width:75%;
+        font-family:monospace;
+        }
+
+    #or{
+      float:right;
+    }
+    img{
+      height:400px;;
+      width:400px;
+    }
+    ul{
+      width:100%;
+
+      display:flex;
+          justify-content:space-between;
+
+    }
+    li{
+      list-style:none;
+      font-size:1.7em;
+    }
+    h1{
+      margin-left:45%;
+      font-size:2.1em;
+    }
+    h2{
+      text-decoration:underline;
+      text-decoration-color:green;
+
+    }
+    img{
+      margin-left:35%;
+    }
+    ul{
+      background-color:rgba(100,150,200,0.5);
+    }
+    ol{
+            background-color:rgba(150,200,100,0.5);
+    }
+      </style>
   </head>
   <body>
     <h1> Odin Recipes</h1>
+    <img src="https://st3.depositphotos.com/1020070/19406/v/1600/depositphotos_194068578-stock-illustration-polish-cuisine-icon-with-meat.jpg" alt="Polish meals - poster">
 
-    <a href="recipes/bigos.html">Bigos</a>
-    <a href="recipes/kopytka.html">Kopytka</a>
-    <a href="recipes/golabki.html">Golabki</a>
+<ul>
+    <li><a href="recipes/bigos.html">Bigos</a></li>
+    <li><a href="recipes/kopytka.html">Kopytka</a></li>
+    <li><a href="recipes/golabki.html">Golabki</a></li>
+    </ul>
   </body>
 </html>
