--- a/recipes/golabki.html
+++ b/recipes/golabki.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <style>
+      body{
+        width:75%;
+        font-family:monospace;
+        }
+
+    #or{
+      float:right;
+    }
+    h1{
+      margin-left:45%;
+    }
+    h2{
+      text-decoration:underline;
+      text-decoration-color:green;
+
+    }
+    img{
+      margin-left:35%;
+    }
+    ul{
+      background-color:rgba(100,150,200,0.5);
+    }
+    ol{
+            background-color:rgba(150,200,100,0.5);
+    }
+      </style>
     <meta charset="utf-8">
-    <title></title>
+    <title>Golabki-Odin</title>
   </head>
   <body>
     <h1>Golabki</h1>
-    <a href="../index.html">Odin Recipes</a>
-<<img src="https://pliki.doradcasmaku.pl/tradycyjne-golabki-z-miesem-i-ryzem0-4.webp" alt="Pic of golabki">
+
+<<img src="https://pliki.doradcasmaku.pl/tradycyjne-golabki-z-miesem-i-ryzem0-4.webp" alt="Pic of golabki" width="300" height="300">
+<p> Golabki, or as we would type it in polish - Gołąbki, is essentialy a pierogi - there is an outer layer with a filling inside.<br> In this case it's cabbage leaf with minced meat and rice stuffing in tomato sauce. Maybe it's more of a spring roll, after all</p>
+<h2>What do you need - ingredients</h2>
+<ul>
+  <li>1 head white cabbage (3-3.3 lb, 1.3-1.5 kg) or savoy cabbage</li>
+  <li>1.7 lb (800 g) ground pork (e.g. pork shoulder)</li>
+  <li>1 large onion (7 oz, 200 g), yellow or white</li>
+  <li>2 tbsp neutral oil, e.g. canola</li>
+  <li>3 garlic cloves</li>
+  <li>½ cup (100 g) cooked rice - cooked ‘al dente’; that’s roughly 1.2 oz/33 g of uncooked rice</li>
+  <li>1 tbsp dried marjoram</li>
+  <li>1 qt (1 litre) chicken stock</li>
+  <li>Salt, to season</li>
+  <li>Ground black pepper, to season</li>
+  <li>Handful of chopped dill or parsley, to garnish (optional)</li>
+</ul>
+  <h2>What to do - instructions</h2>
+<ol>
+
+  <li>Wash the cabbage under running water. Even though the inside is usually clean (the outer leaves protect the inside), you might want to clean it anyway. Remove the tough outer leaves and discard them. Separate the inner leaves and wash them under running water.
+Cut out the stalk from the head. </li>
+
+<li>Grab a large cooking pot, large enough for the whole cabbage head to fit. Pour water in and bring it to boil. Add a solid pinch of salt and sugar and stir.
+Blanch the cabbage head in the boiling water, core side down. After a few minutes (2-3), the leaves should peel off easily. If not - cook it for a few more minutes.
+Remove cabbage to a baking tray, but keep the water in the pot.</li>
+
+<li>(Optional) To keep a more vibrant colour, you can place the leaves into ice water - that will slow down the cooking process.
+Set ten best leaves (largest, unbroken) aside. Using a paring knife, cut the main ‘vein’ out from each cabbage leaf and trim from the bottom with a knife.
+Peel an onion and dice it finely. Finely chop the garlic with a knife. </li>
+
+<li>Heat up a tablespoon or two of oil, add in chopped onion. When it turns golden, add chopped garlic and fry for another 1-2 minutes. Set aside to cool.
+In a large bowl, combine the ground meat, cooked rice, a tablespoon marjoram, and cooled down onion/garlic.</li>
+
+<li>Season with salt and pepper, mix thoroughly - no special tools are necessary, you can use your hands. This mass will be our stuffing.</li>
+
+<li>Lay the cabbage leaf flat. Place about ¼-⅓  cup of meat mixture in the centre of a cabbage leaf. Gather the edges of the cabbage inwards and roll it tightly. Continue until you have 10 decent-sized rolls.
+Line the bottom of the large cooking pot with some of the remaining pre-cooked leaves - this prevents the dish from burning.</li>
+
+<li>Place the cabbage rolls in the pot, in layers, one on top of another. Cover with a layer of remaining leaves. </li>
+
+<li>Pour the stock in. Cook on a medium heat, covered for about 40-50 minutes until the cabbage is tender. Not every cabbage is the same, you’ll have to check how soft it is as you go.
+When the cabbage rolls are nearly done, let’s make the tomato sauce.</li>
+</ol>
+    <a  id="or" href="../index.html">Odin Recipes</a>
   </body>
 </html>
